个人中心的修订

--- a/css/global/color.less
+++ b/css/global/color.less
@@ -15,7 +15,8 @@
 @bo-blue: #cceafe;  //边框浅蓝
 
 @blue-bo:#C2D5E3;	//帖子边框
-@blue-bg:#EAF8FC;	//帖子背景
+//@blue-bg:#EAF8FC;	//帖子背景
+@blue-bg:#eff6fa;	//帖子背景
 
 @pink: #f39;        //粉色
 @pup: #93f;         //紫色
