--- a/css/index/index-v7/layout.less
+++ b/css/index/index-v7/layout.less
@@ -1,5 +1,5 @@
 .index-container{
-	padding:0 0 20px 0;
+	padding:20px 0;
 	.clearfix;
 }
 
@@ -34,5 +34,11 @@
 }
 
 #pt{
-	margin-bottom:10px;
+	.none;
+}
+
+.m-index-msg{
+	.fr;
+	a{.color(@blue-link);}
+	a:hover{text-decoration:underline;}
 }
