--- a/css/module/forum/viewthread/c-fli-meta.less
+++ b/css/module/forum/viewthread/c-fli-meta.less
@@ -25,10 +25,11 @@
 	}
 
 	.u-follow{
-		color:#999;
+		color:#149BA9;
+		&:hover{text-decoration:underline overline;}
 		i{
 			.dbi;.y;.size(16px);background:url('@{url}forum/follow.png') no-repeat 0 0;
-		    margin-top: -2px;
+		    margin-top: -3px;
 			margin-right: 3px;
 		}
 	}
