--- a/css/module/forum/viewthread/c-fli-primary.less
+++ b/css/module/forum/viewthread/c-fli-primary.less
@@ -11,7 +11,7 @@
 }
 
 //文字内容区
-.c-fli-article,.c-fli-reply,.t_f,#blog_article{
+.c-fli-article,.c-fli-reply,.t_f,.m-blog-content{
 
 	.clearfix;
 
@@ -36,7 +36,12 @@
 	img{max-width:100%;height: auto;}
 
 	//水平线
-	hr.l{margin:5px auto;}
+	hr{
+		.h(1px);
+		background-color:#ddd;
+		border:none;
+		margin:8px auto;
+	}
 
 	//表格
 	table{
