--- a/css/module/widget/w-adminbar.less
+++ b/css/module/widget/w-adminbar.less
@@ -1,5 +1,5 @@
 .w-adminbar{
-	background-color:#eff6fa;
+	background-color:@blue-bg;
 	.color(#999,@blue-link,#c00);
 	padding:2px 10px !important;
 	.r(4px);
