--- a/css/system/about.css
+++ b/css/system/about.css
@@ -1,466 +1,1 @@
-/*
- * Name: base.less v3.1
- * Description: function,ie hack
- * Creator: iRuxu,Dora
- * Modify: iRuxu
- * Update: 2015-8-13
- * API: http://help.lab.hunantv.com/page/function/base.html
- */
-.m-timelist ul {
-  padding: 0 0 0 100px;
-}
-.m-timelist ul li {
-  position: relative;
-  *zoom: 1;
-  display: block;
-  padding-bottom: 30px;
-  border-left: 3px solid #dedede;
-}
-.m-timelist ul li:hover i {
-  transform: scale(1);
-}
-.m-timelist ul li:hover span {
-  color: #666;
-}
-.m-timelist ul li a {
-  display: block;
-  padding: 0 30px;
-  line-height: 40px;
-  height: 40px;
-  white-space: nowrap;
-  word-break: keep-all;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.m-timelist ul li i {
-  display: block;
-  position: absolute;
-  left: -7px;
-  top: 9px;
-  width: 10px;
-  height: 20px;
-  background: url("http://img.jx3pve.com/img/about/log.png") center #f7f7f7 no-repeat;
-  transform: scale(0.8);
-  transition: 0.2s ease-in-out;
-}
-.m-timelist ul li strong {
-  position: absolute;
-  left: -120px;
-  top: 0;
-  width: 100px;
-  overflow: hidden;
-  line-height: 40px;
-  height: 40px;
-  color: #666666;
-  text-align: center;
-}
-.m-timelist ul li span {
-  display: block;
-  padding: 0 30px;
-  color: #777;
-  transition: 0.2s ease-in-out;
-  line-height: 2;
-  position: relative;
-  *zoom: 1;
-}
-.m-timelist ul li span:after {
-  content: '';
-  display: block;
-  margin: 10px 10px 5px 0;
-  height: 1px;
-  border-bottom: 1px dotted #ddd;
-}
-.m-timelist ul li .more {
-  position: absolute;
-  right: 0;
-  bottom: -6px;
-  padding: 0;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  width: 40px;
-  height: 12px;
-  text-indent: -200%;
-  overflow: hidden;
-  background: url('http://img.jx3pve.com/img/icon/more.png') no-repeat 0 0;
-}
-.m-timelist ul li .more:hover {
-  background-position: 0 -12px;
-}
-.ua-responsive .screen-s .m-timelist ul {
-  padding-left: 0;
-}
-.ua-responsive .screen-s .m-timelist li strong {
-  position: static;
-  padding-left: 30px;
-}
-.m-about-index h2 {
-  font-weight: bold;
-  margin: 10px 0;
-}
-.m-about-index .m-intro {
-  text-indent: 24px;
-  overflow: hidden;
-  padding: 10px;
-  color: #555;
-}
-.m-about-index .m-timelist span:after {
-  display: none;
-}
-.m-about-index .m-timelist a {
-  cursor: default;
-}
-.m-about-copyright .m-title,
-.m-about-disclaimer .m-title {
-  font-size: 16px;
-  text-align: center;
-}
-.m-about-copyright .m-content,
-.m-about-disclaimer .m-content {
-  line-height: 2.2;
-}
-.m-about-copyright .m-content p,
-.m-about-disclaimer .m-content p {
-  text-indent: 24px;
-  margin-bottom: 5px;
-}
-.m-about-links {
-  *zoom: 1;
-  color: #222222;
-}
-.m-about-links:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-links a {
-  color: #225599;
-}
-.m-about-links a:hover {
-  color: #225599;
-}
-.m-about-links ul {
-  float: left;
-  *display: inline;
-  margin: 0 20px;
-}
-.m-about-links li {
-  line-height: 2.5;
-  list-style: square;
-}
-.m-about-links a:hover {
-  text-decoration: underline;
-}
-.m-about-links-add {
-  margin-top: 10px;
-  clear: both;
-  padding: 0 10px;
-}
-.contact-container h2 {
-  margin-bottom: 10px;
-  line-height: 2.5;
-}
-.m-about-union ul {
-  *zoom: 1;
-}
-.m-about-union ul:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-union ul li {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.m-about-union ul li a {
-  padding: 5px;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  display: block;
-}
-.m-about-union ul li a img {
-  max-width: 200px;
-}
-.m-about-contact {
-  *zoom: 1;
-}
-.m-about-contact:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-contact a {
-  display: block;
-  text-align: right;
-  line-height: 80px;
-  padding: 0 20px 0 120px;
-  border-radius: 10px;
-  margin-right: 60px;
-  margin-bottom: 10px;
-  float: left;
-  *display: inline;
-  border: 1px solid #ddd;
-  transition: 0.2s ease-in-out;
-}
-.m-about-contact a:hover {
-  box-shadow: 0 0 2px #ddd inset;
-  color: #c00;
-  background-position: 30px center;
-}
-.m-about-contact .email {
-  background: url('http://img.jx3pve.com/img/about/email.png') #ffffff no-repeat 20px center;
-}
-.m-about-contact .sms {
-  background: url('http://img.jx3pve.com/img/about/sms.png') #ffffff no-repeat 20px center;
-}
-.m-about-contact .qq {
-  background: url('http://img.jx3pve.com/img/about/qq.png') #ffffff no-repeat 20px center;
-}
-.m-about-author ul {
-  *zoom: 1;
-}
-.m-about-author ul:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-author li {
-  margin: 0 20px 20px 0;
-}
-.ml p,
-.ml span {
-  height: auto !important;
-}
-.f-392 .w-category,
-.f-392 .w-order,
-.f-392 .w-filter {
-  display: none;
-}
-.f-392 .w-pages-top {
-  display: none;
-}
-.f-392 .w-custom {
-  display: none;
-}
-.f-392 .i-header-menu .u-post {
-  display: none;
-}
-.m-about-log {
-  margin-bottom: 10px;
-}
-.c-fli-custom {
-  line-height: 2.5;
-  border-bottom: 1px solid #eee;
-}
-.c-fli-custom em {
-  background-color: #f2f2f2;
-  border-radius: 2px;
-  padding: 3px 6px;
-  margin-right: 5px;
-  color: #555;
-}
-.u-btn-publish {
-  display: none;
-}
-.adminHTML .u-btn-publish {
-  display: block;
-}
-.adminHTML .i-header-menu .u-post {
-  display: block;
-}
-.ua-responsive .screen-s .pg {
-  float: none;
-  margin-bottom: 10px;
-}
-.ua-responsive .screen-s .u-btn-publish {
-  float: none !important;
-  margin: 0 auto !important;
-  clear: both;
-}
-.ua-responsive .screen-m .m-timelist ul {
-  padding-left: 100px;
-}
-.ua-responsive .screen-s .mn {
-  overflow: visible;
-}
-.m-about-member ul li {
-  *zoom: 1;
-  background-color: #f9f9f9;
-  padding: 10px 20px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  border: 1px solid #eee;
-}
-.m-about-member ul li:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-member ul li .author {
-  float: right;
-  *display: inline;
-  margin-left: 20px;
-  text-align: center;
-}
-.m-about-member ul li .author a {
-  display: block;
-}
-.m-about-member ul li .author .avt {
-  display: block;
-  width: 80px;
-  height: 80px;
-  border-radius: 80px;
-  border: 1px solid #eee;
-  padding: 2px;
-}
-.m-about-member ul li .author .avt img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 80px;
-  border: none;
-  padding: 0;
-}
-.m-about-member ul li .author:hover .avt img {
-  animation: rotateRound 0.5s ease-in-out forwards;
-}
-.m-about-member ul li .info {
-  display: block;
-  letter-spacing: 0.5px;
-  line-height: 2.5;
-}
-.m-about-member ul li .info em {
-  margin-right: 10px;
-}
-.m-about-member ul li .info b {
-  color: #666;
-}
-.m-about-member ul li .details {
-  color: #666;
-  text-indent: 24px;
-  overflow: hidden;
-  padding: 0 20px;
-}
-.m-about-join {
-  margin-bottom: 10px;
-}
-.m-about-join ul {
-  display: block;
-}
-.m-about-join li {
-  display: block;
-  *zoom: 1;
-  border-bottom: 1px solid #ddd;
-}
-.m-about-join li:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-join li:hover {
-  background-color: #F6FAFD;
-}
-.m-about-join li.on .details {
-  display: block;
-}
-.m-about-join .default {
-  line-height: 40px;
-  height: 40px;
-}
-.m-about-join .default * {
-  display: block;
-  float: left;
-  *display: inline;
-  width: 18%;
-  text-indent: 10px;
-  overflow: hidden;
-}
-.m-about-join .default .email {
-  width: 28%;
-}
-.m-about-join .th {
-  background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
-}
-.m-about-join .th:hover {
-  background-color: #f5f5f5;
-}
-.m-about-join .default {
-  display: block;
-  width: 100%;
-  height: auto;
-  *zoom: 1;
-}
-.m-about-join .default:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-.m-about-join .details {
-  display: block;
-  border-top: 1px dotted #ddd;
-  line-height: 2.5;
-  padding: 10px;
-  display: none;
-}
-.m-about-join .go {
-  text-align: center;
-}
-.m-about-join a {
-  color: #049abf;
-}
-.m-about-join a:hover {
-  color: #cc0000;
-}
-.m-about-join .sms {
-  display: none;
-}
-.ua-responsive .screen-s .m-about-join .default .role {
-  width: 40%;
-}
-.ua-responsive .screen-s .m-about-join .default .email {
-  width: 40%;
-}
-.ua-responsive .screen-s .m-about-join .default .go {
-  width: 20%;
-}
-.ua-responsive .screen-s .m-about-join .default .channel,
-.ua-responsive .screen-s .m-about-join .default .date {
-  display: none;
-}
-.ua-responsive .screen-s .default-sidebar {
-  position: fixed;
-  left: 0;
-  top: 45px;
-  z-index: 40;
-  width: 100%;
-  padding: 10px 0;
-  border-bottom: 1px solid #ddd;
-  background-color: #fff;
-  border-radius: 0;
-}
-.pg_forumdisplay .i-header {
-  z-index: 40;
-}
-.alertHTML.ua-responsive .screen-s .default-sidebar {
-  top: 75px;
-}
-.system-main {
-  min-height: 308px;
-}
-.f-392-container {
-  background-color: #fff !important;
-}
-.f-392 .default-content {
-  border: none;
-}
+.m-timelist ul{padding:0 0 0 100px}.m-timelist ul li{position:relative;*zoom:1;display:block;padding-bottom:30px;border-left:3px solid #dedede}.m-timelist ul li:hover i{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1)}.m-timelist ul li:hover span{color:#666}.m-timelist ul li a{display:block;padding:0 30px;line-height:40px;height:40px;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis;overflow:hidden}.m-timelist ul li i{display:block;position:absolute;left:-7px;top:9px;width:10px;height:20px;background:url("http://img.jx3pve.com/img/about/log.png") center #f7f7f7 no-repeat;-webkit-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);-webkit-transition:.2s ease-in-out;transition:.2s ease-in-out}.m-timelist ul li strong{position:absolute;left:-120px;top:0;width:100px;overflow:hidden;line-height:40px;height:40px;color:#666;text-align:center}.m-timelist ul li span{display:block;padding:0 30px;color:#777;-webkit-transition:.2s ease-in-out;transition:.2s ease-in-out;line-height:2;position:relative;*zoom:1}.m-timelist ul li span:after{content:'';display:block;margin:10px 10px 5px 0;height:1px;border-bottom:1px dotted #ddd}.m-timelist ul li .more{position:absolute;right:0;bottom:-6px;padding:0;display:inline-block;*display:inline;*zoom:1;width:40px;height:12px;text-indent:-200%;overflow:hidden;background:url('http://img.jx3pve.com/img/icon/more.png') no-repeat 0 0}.m-timelist ul li .more:hover{background-position:0 -12px}.ua-responsive .screen-s .m-timelist ul{padding-left:0}.ua-responsive .screen-s .m-timelist li strong{position:static;padding-left:30px}.m-about-index h2{font-weight:bold;margin:10px 0}.m-about-index .m-intro{text-indent:24px;overflow:hidden;padding:10px;color:#555}.m-about-index .m-timelist span:after{display:none}.m-about-index .m-timelist a{cursor:default}.m-about-copyright .m-title,.m-about-disclaimer .m-title{font-size:16px;text-align:center}.m-about-copyright .m-content,.m-about-disclaimer .m-content{line-height:2.2}.m-about-copyright .m-content p,.m-about-disclaimer .m-content p{text-indent:24px;margin-bottom:5px}.m-about-links{*zoom:1;color:#222}.m-about-links:after{content:"\200B";display:block;height:0;clear:both}.m-about-links a{color:#259}.m-about-links a:hover{color:#259}.m-about-links ul{float:left;*display:inline;margin:0 20px}.m-about-links li{line-height:2.5;list-style:square}.m-about-links a:hover{text-decoration:underline}.m-about-links-add{margin-top:10px;clear:both;padding:0 10px}.contact-container h2{margin-bottom:10px;line-height:2.5}.m-about-union ul{*zoom:1}.m-about-union ul:after{content:"\200B";display:block;height:0;clear:both}.m-about-union ul li{display:inline-block;*display:inline;*zoom:1;margin-right:10px;margin-bottom:10px}.m-about-union ul li a{padding:5px;border:1px solid #ddd;background-color:#fff;display:block}.m-about-union ul li a img{max-width:200px}.m-about-contact{*zoom:1}.m-about-contact:after{content:"\200B";display:block;height:0;clear:both}.m-about-contact a{display:block;text-align:right;line-height:80px;padding:0 20px 0 120px;border-radius:10px;margin-right:60px;margin-bottom:10px;float:left;*display:inline;border:1px solid #ddd;-webkit-transition:.2s ease-in-out;transition:.2s ease-in-out}.m-about-contact a:hover{box-shadow:0 0 2px #ddd inset;color:#c00;background-position:30px center}.m-about-contact .email{background:url('http://img.jx3pve.com/img/about/email.png') #fff no-repeat 20px center}.m-about-contact .sms{background:url('http://img.jx3pve.com/img/about/sms.png') #fff no-repeat 20px center}.m-about-contact .qq{background:url('http://img.jx3pve.com/img/about/qq.png') #fff no-repeat 20px center}.m-about-author ul{*zoom:1}.m-about-author ul:after{content:"\200B";display:block;height:0;clear:both}.m-about-author li{margin:0 20px 20px 0}.ml p,.ml span{height:auto !important}.f-392 .w-category,.f-392 .w-order,.f-392 .w-filter{display:none}.f-392 .w-pages-top{display:none}.f-392 .w-custom{display:none}.f-392 .i-header-menu .u-post{display:none}.m-about-log{margin-bottom:10px}.c-fli-custom{line-height:2.5;border-bottom:1px solid #eee}.c-fli-custom em{background-color:#f2f2f2;border-radius:2px;padding:3px 6px;margin-right:5px;color:#555}.u-btn-publish{display:none}.adminHTML .u-btn-publish{display:block}.adminHTML .i-header-menu .u-post{display:block}.ua-responsive .screen-s .pg{float:none;margin-bottom:10px}.ua-responsive .screen-s .u-btn-publish{float:none !important;margin:0 auto !important;clear:both}.ua-responsive .screen-m .m-timelist ul{padding-left:100px}.ua-responsive .screen-s .mn{overflow:visible}.m-about-member ul li{*zoom:1;background-color:#f9f9f9;padding:10px 20px;border-radius:4px;margin-bottom:30px;border:1px solid #eee}.m-about-member ul li:after{content:"\200B";display:block;height:0;clear:both}.m-about-member ul li .author{float:right;*display:inline;margin-left:20px;text-align:center}.m-about-member ul li .author a{display:block}.m-about-member ul li .author .avt{display:block;width:80px;height:80px;border-radius:80px;border:1px solid #eee;padding:2px}.m-about-member ul li .author .avt img{display:block;width:100%;height:100%;border-radius:80px;border:none;padding:0}.m-about-member ul li .author:hover .avt img{-webkit-animation:rotateRound .5s ease-in-out forwards;animation:rotateRound .5s ease-in-out forwards}.m-about-member ul li .info{display:block;letter-spacing:.5px;line-height:2.5}.m-about-member ul li .info em{margin-right:10px}.m-about-member ul li .info b{color:#666}.m-about-member ul li .details{color:#666;text-indent:24px;overflow:hidden;padding:0 20px}.m-about-join{margin-bottom:10px}.m-about-join ul{display:block}.m-about-join li{display:block;*zoom:1;border-bottom:1px solid #ddd}.m-about-join li:after{content:"\200B";display:block;height:0;clear:both}.m-about-join li:hover{background-color:#f6fafd}.m-about-join li.on .details{display:block}.m-about-join .default{line-height:40px;height:40px}.m-about-join .default *{display:block;float:left;*display:inline;width:18%;text-indent:10px;overflow:hidden}.m-about-join .default .email{width:28%}.m-about-join .th{background-color:#f5f5f5;border-top:1px solid #ddd}.m-about-join .th:hover{background-color:#f5f5f5}.m-about-join .default{display:block;width:100%;height:auto;*zoom:1}.m-about-join .default:after{content:"\200B";display:block;height:0;clear:both}.m-about-join .details{display:block;border-top:1px dotted #ddd;line-height:2.5;padding:10px;display:none}.m-about-join .go{text-align:center}.m-about-join a{color:#049abf}.m-about-join a:hover{color:#c00}.m-about-join .sms{display:none}.ua-responsive .screen-s .m-about-join .default .role{width:40%}.ua-responsive .screen-s .m-about-join .default .email{width:40%}.ua-responsive .screen-s .m-about-join .default .go{width:20%}.ua-responsive .screen-s .m-about-join .default .channel,.ua-responsive .screen-s .m-about-join .default .date{display:none}.ua-responsive .screen-s .default-sidebar{position:fixed;left:0;top:45px;z-index:40;width:100%;padding:10px 0;border-bottom:1px solid #ddd;background-color:#fff;border-radius:0}.pg_forumdisplay .i-header{z-index:40}.alertHTML.ua-responsive .screen-s .default-sidebar{top:75px}.system-main{min-height:308px}.f-392-container{background-color:#fff !important}.f-392 .default-content{border:none}
