--- a/css/user/space/album.less
+++ b/css/user/space/album.less
@@ -1,4 +1,15 @@
 //相册
+.user-album-upload{
+	.mn{border:none;}
+
+	.uploadform{
+		background-color:#fafafa;
+		border:1px solid #eee;
+	}
+}
+
+
+
 .tbmu .pn{
 	.lh(28px);
 }
