--- a/css/user/space/doing.less
+++ b/css/user/space/doing.less
@@ -13,8 +13,8 @@
 
 #moodfm{
 	margin-bottom:20px;
-	background-color:#f7f7f7;
-	border:1px solid #ddd;
+	background-color:#fafafa;
+	border:1px solid #eee;
 	padding:20px;
 	.r(4px);
 
