--- a/template/yylmacro/home/空间/space_wall.htm
+++ b/template/yylmacro/home/空间/space_wall.htm
@@ -16,14 +16,13 @@
 		<a class="i-header-back" href="./home.php"><i></i></a>
 		<div class="i-header-title">留言板</div>
 	</header>
-	<div id="pt" class="bm cl">
-		<div class="wp">
+	<div class="wp">
+		<div id="pt" class="bm cl">
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
 				<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
-				<em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=wall&from=space">{lang message}</a>
+				<em>&rsaquo;</em> <a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a>
+				<em>&rsaquo;</em> <a href="home.php?mod=space&uid=$space[uid]&do=wall&from=space">{lang message}</a>
 			</div>
 		</div>
 	</div>
