--- a/template/yylmacro/portal/portal_topic_test.htm
+++ b/template/yylmacro/portal/portal_topic_test.htm
@@ -8,6 +8,9 @@
                 <a href="./" class="nvhm" title="首页">剑网3PVE官方站（JX3PVE.COM）</a> 
                 <em>›</em> <a href="http://www.jx3pve.com">首页</a>
             </div>
+            <div class="m-index-msg">
+                <!--{block/1815}-->
+            </div>
         </div>
 
         <div class="index-content">
@@ -66,6 +69,10 @@
             <div class="m-index-os">
                 <a class="u-title" href="">JX3PVE官方工具集</a>
                 <a class="u-desc" href="">立刻下载 v1.0 beta</a>
+                <span class="u-ribbon">
+                    <i class="u-ribbon-bg"></i>
+                    <i class="u-ribbon-txt">BETA</i>
+                </span>
             </div>
 
             <div class="m-index-my">
