--- a/css/index/index-v7/sidebar.less
+++ b/css/index/index-v7/sidebar.less
@@ -1,13 +1,62 @@
 .m-index-os{
 	//border:1px solid #eee;
 	padding:10px;
-	.r(3px);
 	margin-bottom:20px;
+	border:1px solid darken(@blue-bg,2%);
+	background-color:lighten(@blue-bg,1%);
+	transition:0.1s ease-in-out;
+	&:hover{
+		border:1px solid darken(@blue-bg,3%);
+		background-color:@blue-bg;
+	}
+	.r(3px);
+
 	a{.db;.x;}
 	.u-title{.fz(16px);.color(@blue-link,#c00);}
 	.u-desc{.color(#666,#c00);}
-	background-color:#eff6fa;
-	&:hover{background-color:#eff6fa;}
+
+	.pr;overflow:hidden;
+	.u-ribbon{
+		.pa;.rt(0,0);.size(68px);
+		i{
+			.db;transform:rotate(45deg);
+			.pa;
+		}
+		.u-ribbon-bg{
+			.rt(-30px,0);
+			.w(106px);.h(27px);
+			box-shadow: 0 1px 1px rgba(0,0,0,0.12);
+
+			.gradient-ribbon(@color){
+				background: @color;
+				@a:lighten(@color, 10%);
+				@b:darken(@color, 10%);
+			    background: -webkit-linear-gradient(top, @a, @b);
+			    background: linear-gradient(to bottom, @a, @b);
+			}
+
+			//绿色（测试版beta）
+			.gradient-ribbon(#0BB108);
+
+			//橙色（前瞻版alpha）
+			//.gradient-ribbon(#F78917);
+
+			//蓝色（正式版standard）
+			/*background: #0767c8;
+		    background: -webkit-linear-gradient(top, #086ed5, #055db5);
+		    background: linear-gradient(to bottom, #086ed5, #055db5);*/
+		    
+		    //红色（稳定版）
+		    //.gradient-ribbon(#c00);
+		    
+		}
+		.u-ribbon-txt{
+			color:#fff;
+			.rt(0,8px);
+		    text-shadow: 0 1px 1px rgba(0,0,0,0.12);
+		}
+
+	}
 }
 
 .m-index-my{
@@ -24,11 +73,8 @@
 		line-height:36px;
 		padding-left:10px;
 		border-bottom:1px solid #eee;
-		&:hover{
-		    //background: #eff6fa;
-    		//.r(3px);
-    		/*border-bottom:1px solid #ddd;
-    		border-top:1px solid #ddd;*/
+		&:hover i{
+			background-position:0 -16px;
 		}
 	}
 	i{
