--- a/css/module/common/c-footer/all.less
+++ b/css/module/common/c-footer/all.less
@@ -7,8 +7,8 @@
 	font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,'宋体','微软雅黑',Arial,sans-serif;
 	line-height:2.2;
 	padding:20px 0;
-	border-top:1px solid #ddd;
-	background-color:#f9f9f9;
+	border-top:1px solid #eee;
+	background-color:#fafafa;
 	.color(#222,@blue-link,@blue-link);
 	a:hover{text-decoration:underline;}
 }
