--- a/css/module/widget/w-route.less
+++ b/css/module/widget/w-route.less
@@ -1,11 +1,6 @@
 #pt{
 
-	margin:0 auto;
-	/*border:none;
-	padding: 5px 0;
-    border-bottom: 1px dotted #ccc;*/
-
-    //margin-bottom:10px;
+	margin:20px auto 10px auto;
     .lh(29px);
     .pr;
 
@@ -18,7 +13,6 @@
     border:1px solid #eee;
     padding:5px 10px;
     .r(4px);
-    margin-top:20px;
 }
 .ua-responsive .screen-s #pt{
 	.none;
