--- a/css/user/msg/friend.less
+++ b/css/user/msg/friend.less
@@ -1,6 +1,14 @@
 @import url('../../public/base.less');		//函数
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
+.m-friend-box{
+	padding-right:0 !important;
+}
+.m-friend-search{
+	margin-right:0 !important;
+	float:none !important;
+}
+
 
 #friend_ul{
 	.clearfix;
@@ -9,17 +17,23 @@
 	}
 	li{
 		.fl;
-		//.w(25%);
-		//min-width:220px;
+		.w(140px);
+		padding:10px;
 		margin-bottom:10px;
+		margin-right:10px;
+		border:1px solid #eee;
 
 		h4{
-			img{margin-top:-2px;margin-left:2px;}
+			a{.nobreak;}
+			img{.db;}
 			//span{.fl;margin-right:2px;}
 			.xg1{.none;}
 		}
 		.maxh{.none;}
 	}
+}
+.screen-s #friend_ul li{
+	.w(39%);
 }
 
 .buddy_group{
