--- a/css/user/space/common.less
+++ b/css/user/space/common.less
@@ -2,20 +2,43 @@
 	padding-bottom:10px;
 }
 
+.bm{margin-bottom:0;border:none;}
+.bm_h{.none;}
+
+.ct1{
+	border:none;
+}
+//通栏 vs 侧边
+#ct .mn{
+	border:1px solid #eee;
+}
+#ct.ct2_a .mn{
+	border:none;
+}
+
 //公共头部
-#pt{
-	margin-bottom:10px;
-}
-#pt,#uhd{
-	.w(@wpm);
-	.auto(x);
-}
 #uhd{
-	background-color:#f7f7f7;
-}
-#uhd .tb a{
-	border-top:none;
+	background-color:#fafafa;
+	border:1px solid #eee;
 	border-bottom:none;
+}
+
+#uhd .tb {
+	margin-top:10px;
+	border-bottom:none;
+
+	a{
+		margin-right:5px;
+		border-top:none;
+		border-bottom:none;
+		background-color:#f5f5f5;
+	}
+
+	.a a{
+		background-color:@blue-bg;
+		border:1px solid #eee;
+		color:@blue-link;
+	}
 }
 
 .ua-responsive .screen-s #uhd{
