--- a/css/user/space/share.less
+++ b/css/user/space/share.less
@@ -27,8 +27,8 @@
 //后台
 .m-share{
 	padding:5px 20px 25px 20px;
-	background-color:#f7f7f7;
-	border:1px solid #ddd;
+	background-color:#fafafa;
+	border:1px solid #eee;
 	.r(4px);
 	margin:0 0 20px 0;
 }
