--- a/template/yylmacro/home/侧边栏/spacecp_footer.htm
+++ b/template/yylmacro/home/侧边栏/spacecp_footer.htm
@@ -33,7 +33,7 @@
 
 	<h3 class="user-sidebar-title"><i class="u-user-os-space"></i>个人空间</h3>
 	<ul class="user-sidebar-list">
-		<li {if ($_GET['do']=="profile")} class="on"{/if}><a href="home.php?mod=space&do=profile" data-target="_blank">我的空间</a></li>
+		<li {if ($_GET['do']=="profile")} class="on"{/if}><a href="home.php?mod=space&do=profile" target="_blank">我的空间</a></li>
 		<li {if ($_GET['do']=="blog")} class="on"{/if}><a href="home.php?mod=space&do=blog">我的日志</a></li>
 		<li {if ($_GET['do']=="album")} class="on"{/if}><a href="home.php?mod=space&do=album">我的相册</a></li>
 		<li {if ($_GET['do']=="share")} class="on"{/if}><a href="home.php?mod=space&do=share">我的分享</a></li>
