--- a/template/yylmacro/home/空间/space_blog_list.htm
+++ b/template/yylmacro/home/空间/space_blog_list.htm
@@ -20,8 +20,8 @@
 			<a class="i-header-back" href="./home.php"><i></i></a>
 			<div class="i-header-title">日志</div>
 		</header>
-		<div id="pt" class="bm cl">
-			<div class="wp">
+		<div class="wp">
+			<div id="pt" class="bm cl">
 				<div class="z">
 					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
 					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
@@ -54,12 +54,10 @@
 		<div class="wp">
 
 			<div id="pt" class="bm cl">
-				<div class="wp">
-					<div class="z">
-						<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-						<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
-						<a href="home.php?mod=space&do=blog">{lang blog}</a>
-					</div>
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&do=blog">{lang blog}</a>
 				</div>
 			</div>
 
@@ -167,7 +165,7 @@
 						<!--{/if}-->
 						<!--{if empty($diymode)}--><a href="home.php?mod=space&uid=$value[uid]">$value[username]</a> <!--{/if}--><span class="xg1">$value[dateline]</span>
 					</dd>
-					<dd class="cl" id="blog_article_$value[blogid]">
+					<dd class="cl m-blog-listpre" id="blog_article_$value[blogid]">
 						<!--{if $value[pic]}--><div class="atc"><a href="home.php?mod=space&uid=$value[uid]&do=blog&id=$value[blogid]"><img src="$value[pic]" alt="$value[subject]" class="tn" /></a></div><!--{/if}-->
 						$value[message]
 					</dd>
