--- a/template/yylmacro/home/空间/space_friend.htm
+++ b/template/yylmacro/home/空间/space_friend.htm
@@ -12,9 +12,7 @@
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
 				<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
-				<em>&rsaquo;</em>
-				<a href="home.php?mod=space&do=friend">{lang friends}</a> <em>&rsaquo;</em>
-				{lang friend_list}
+				<em>&rsaquo;</em> <a href="home.php?mod=space&do=friend">{lang friends}</a> 
 			</div>
 		</div>
 
