--- a/template/yylmacro/home/空间/space_profile.htm
+++ b/template/yylmacro/home/空间/space_profile.htm
@@ -13,12 +13,13 @@
 		<a class="i-header-back" href="./home.php"><i></i></a>
 		<div class="i-header-title">名片</div>
 	</header>
-	<div id="pt" class="bm cl">
-		<div class="wp">
+	<div class="wp">
+		<div id="pt" class="bm cl">
 			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				{lang memcp_profile}
+				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
+				<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
+				<em>&rsaquo;</em> <a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> 
+				<em>&rsaquo;</em> {lang memcp_profile}
 			</div>
 		</div>
 	</div>
@@ -27,7 +28,7 @@
 		<!--[diy=diy1]--><div id="diy1" class="area"></div><!--[/diy]-->
 	</div>
 	<!--{template home/space_menu}-->
-	<div id="ct" class="ct1 wp cl">
+	<div id="ct" class="wp cl">
 		<div class="mn">
 			<!--[diy=diycontenttop]--><div id="diycontenttop" class="area"></div><!--[/diy]-->
 			<div class="bm bw0">
