--- a/template/yylmacro/home/空间/space_thread.htm
+++ b/template/yylmacro/home/空间/space_thread.htm
@@ -26,8 +26,8 @@
 			<a class="i-header-back" href="./home.php"><i></i></a>
 			<div class="i-header-title">主题</div>
 		</header>
-		<div id="pt" class="bm cl">
-			<div class="wp">
+		<div class="wp">
+			<div id="pt" class="bm cl">
 				<div class="z">
 					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
 					<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
@@ -47,11 +47,13 @@
 	<!--{/if}-->
 <!--{else}-->
 	<!--{template common/header_m}-->
-	<div id="pt" class="bm cl">
-		<div class="z">
-			<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-			<!--{if $_G[setting][homestyle]}--><a href="home.php">$_G[setting][navs][4][navname]</a> <em>&rsaquo;</em> <!--{/if}-->
-			<a href="home.php?mod=space&do=blog">{lang thread}</a>
+	<div class="wp">
+		<div id="pt" class="bm cl">
+			<div class="z">
+				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+				<!--{if $_G[setting][homestyle]}--><a href="home.php">$_G[setting][navs][4][navname]</a> <em>&rsaquo;</em> <!--{/if}-->
+				<a href="home.php?mod=space&do=blog">{lang thread}</a>
+			</div>
 		</div>
 	</div>
 	<style id="diy_style" type="text/css"></style>
