--- a/template/yylmacro/home/空间/spacecp_blog.htm
+++ b/template/yylmacro/home/空间/spacecp_blog.htm
@@ -63,21 +63,24 @@
 		<a class="i-header-back" href="./home.php"><i></i></a>
 		<div class="i-header-title">日志</div>
 	</header>
-	<div id="pt" class="bm cl">
-		<div class="z">
-			<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-			<!--{if $space[self]}-->
-				<a href="home.php?mod=space&do=blog">{lang blog}</a>
-			<!--{else}-->
-				<a href="home.php?mod=space&uid=$space[uid]">$space[username] {lang somebody_space}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=we">{lang blog}</a>
-			<!--{/if}-->
-			<em>&rsaquo;</em>
-			<!--{if $blog[blogid]}-->
-				<a href="home.php?mod=space&uid=$blog[uid]&do=blog&id=$blog[blogid]">$blog[subject]</a> <em>&rsaquo;</em> {lang edit_blog}
-			<!--{else}-->
-				{lang memcp_blog}
-			<!--{/if}-->
+	<div class="wp">
+		<div id="pt" class="bm cl">
+			<div class="z">
+				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+				<a href="home.php">{lang useros}</a><em>&rsaquo;</em>
+				<!--{if $space[self]}-->
+					<a href="home.php?mod=space&do=blog">{lang blog}</a>
+				<!--{else}-->
+					<a href="home.php?mod=space&uid=$space[uid]">$space[username] {lang somebody_space}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=we">{lang blog}</a>
+				<!--{/if}-->
+				<em>&rsaquo;</em>
+				<!--{if $blog[blogid]}-->
+					<a href="home.php?mod=space&uid=$blog[uid]&do=blog&id=$blog[blogid]">$blog[subject]</a> <em>&rsaquo;</em> {lang edit_blog}
+				<!--{else}-->
+					{lang memcp_blog}
+				<!--{/if}-->
+			</div>
 		</div>
 	</div>
 
